# flappy-bird-clone

./: .gitignore  104963587  Bird.cpp  Bird.hpp  CMakeLists.txt  Config.hpp  FIX_PLAN.md  Pipe.cpp  Pipe.hpp  README.md  REVIEW_FINDINGS.md  UI_UX_IMPROVEMENTS.md  easy.json  hard.json  main.cpp  medium.json
assets/: gameconfig.json
build_tests/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
build_tests/src/: Makefile  cmake_install.cmake
build_tests/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  cmake_test_discovery_887f0f1139.json  flappy_tests  flappy_tests[1]_include.cmake  flappy_tests[1]_tests.cmake
docs/: CHANGES.md  DEVELOPMENT_ROADMAP.md  FUTURE_IMPROVEMENTS.md  IMPROVEMENTS.md  PROJECT_LOG.md  README.md  REVIEW_FINDINGS.md  REVIEW_FINDINGS_2026-06-18.md  UI_UX_IMPROVEMENTS.md  refactor_progress.md
docs/superpowers/plans/: 2026-07-02-score_manager_refactor.md  2026-07-02-visual-effects-refactor.md  2026-07-03-dynamic-difficulty-scaling-plan.md  2026-07-07-advanced-particles.md  2026-07-07-menu-polish.md  2026-07-08-config-injection.md  2026-07-08-phase1-audio-foundation.md
docs/superpowers/specs/: 2026-07-03-dynamic-difficulty-scaling-design.md  2026-07-06-add-missing-tests-design.md  2026-07-07-advanced-particles-design.md  2026-07-07-integration-tests-design.md  2026-07-07-menu-polish-design.md  2026-07-08-config-injection-design.md  2026-07-08-menu-redesign-design.md  2026-07-08-phase1-audio-foundation-design.md
graphify-out/: .graphify_analysis.json  .graphify_ast.json  .graphify_detect.json  .graphify_extract.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  graph.json
graphify-out/cache/: stat-index.json
src/: Bird.cpp  Bird.hpp  BirdState.h  CMakeLists.txt  CloudSystem.cpp  CloudSystem.hpp  Config.hpp  ConfigLoader.cpp  ConfigLoader.hpp  EnvironmentRenderer.cpp  EnvironmentRenderer.hpp  GameOverState.cpp  GameOverState.h  GameState.h  HighScore.cpp  HighScore.hpp  HighScoreScreenState.h  MenuState.h  ObjectPool.h  ParticleSystem.cpp  ParticleSystem.hpp  Pipe.cpp  Pipe.hpp  PlayState.cpp  PlayState.h  PowerUp.cpp  PowerUp.hpp  ResourceManager.cpp  ResourceManager.hpp  ScoreFloat.h  ScoreManager.cpp  SoundManager.cpp  SoundManager.hpp  StateFactory.cpp  StateFactory.h  VisualEffectManager.cpp  VisualEffectManager.hpp  main.cpp
src/audio/: SoundManager.cpp
src/core/: Config.hpp  ConfigLoader.hpp  ConfigValues.cpp  ConfigValues.hpp  HighScore.cpp  MathUtils.hpp  ObjectPool.h
src/entities/: Bird.cpp  Bird.hpp  BirdState.h  Pipe.cpp  Pipe.hpp  PowerUp.cpp  PowerUp.hpp
src/scoring/: ScoreFloat.h  ScoreManager.cpp  ScoreManager.hpp
src/states/: GameOverState.cpp  GameOverState.h  GameState.h  HighScoreScreenState.h  MenuState.h  PlayState.cpp  PlayState.h  SettingsState.cpp  SettingsState.h  StateFactory.cpp  StateFactory.h
src/systems/: ResourceManager.hpp  VisualEffectManager.cpp  VisualEffectManager.hpp
src/visual/: CloudSystem.cpp  CloudSystem.hpp  EnvironmentRenderer.cpp  EnvironmentRenderer.hpp  Particle.hpp  ParticleSystem.cpp  ParticleSystem.hpp
tests/: CMakeLists.txt  CTestTestfile.cmake  cmake_test_discovery_887f0f1139.json  flappy_tests  flappy_tests[1]_include.cmake  flappy_tests[1]_tests.cmake  main.cpp  test_Bird.cpp  test_CloudSystem.cpp  test_Collision.cpp  test_ConfigEdgeCases.cpp  test_ConfigLoader.cpp  test_DifficultyScaling.cpp  test_EnvironmentRenderer.cpp  test_GameOverState.cpp  test_HighScore.cpp  test_HighScoreScreenState.cpp  test_Integration.cpp  test_MenuState.cpp  test_ObjectPool.cpp  test_ParticleSystem.cpp  test_Pipe.cpp  test_PowerUp.cpp  test_ResourceManager.cpp  test_ScoreFloat.cpp  test_SoundManager.cpp  test_StateFactory.cpp  test_VisualEffectManager.cpp
tests/assets/: gameconfig.json
